--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Reposteria_AM"
         tools:targetApi="31">
         <activity
+            android:name=".Vendedor.RegistroVendedorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Cliente.RegistroVendedorActivity"
+            android:exported="false" />
+        <activity
             android:name=".Vendedor.MainActivityVendedor"
             android:exported="false" />
         <activity
@@ -26,7 +32,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
