--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ constraintlayout = "2.1.4"
 lottieV="4.2.1"
 googleServiceV="4.4.2"
 firebaseAuthV="23.2.1"
+firebaseDataBaseV="21.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -23,6 +24,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 firebaseAuth={group="com.google.firebase" , name="firebase-auth" , version.ref="firebaseAuthV"}
+firebaseDatabase = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDataBaseV" }
 lottie={group="com.airbnb.android" , name ="lottie", version.ref="lottieV"}
 
 [plugins]
