--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,6 @@
             android:name=".Vendedor.RegistroVendedorActivity"
             android:exported="false" />
         <activity
-            android:name=".Cliente.RegistroVendedorActivity"
-            android:exported="false" />
-        <activity
             android:name=".Vendedor.MainActivityVendedor"
             android:exported="false" />
         <activity
@@ -36,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Cliente.MainActivityCliente"
             android:exported="true" />
     </application>
 
