--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Reposteria_AM"
         tools:targetApi="31">
         <activity
+            android:name=".SeleccionarTipoActivity"
+            android:exported="false" />
+        <activity
             android:name=".Cliente.LoginClienteActivity"
             android:exported="false" />
         <activity
