--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage"/>
+
 
     <application
         android:allowBackup="true"
@@ -14,6 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Reposteria_AM"
         tools:targetApi="31">
+        <activity
+            android:name=".Vendedor.Productos.AgregarProductoActivity"
+            android:exported="false" />
         <activity
             android:name=".SeleccionarTipoActivity"
             android:exported="false" />
